# repoman

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.org
.github/workflows/: rust.yml
src/: args.rs  main.rs
src/utils/: actions.rs  command.rs  common.rs  dirs.rs  mod.rs
src/utils/actions/: branch.rs  status.rs
