[package]
name = "repo"
authors = ["Atri Hegde <https://github.com/hegde-atri>"]
description = "A tool to manage your home of repositories"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
thiserror = "1.0.38"
which = "4.4.0"

[dev-dependencies]
anyhow = "1"
