[package]
name = "repo"
version = "0.0.1"
edition = "2021"
authors = ["Atri Hegde <atri@hegdeatri.com>"]
license = "AGPL-v3"
license-file = "LICENCE"
readme = "README.org"
description = "A tool to manage your home of repositories"
homepage = "https://github.com/hegde-atri/repo"
repository = "https://github.com/hegde-atri/repo"
keywords = ["cli", "repo", "repository management"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.1.11", features = ["derive"] }
thiserror = "1.0.38"
which = "4.4.0"

[dev-dependencies]
anyhow = "1"
