[package]
name = "repoman"
version = "0.0.1"
edition = "2021"
authors = ["Atri Hegde <atri@hegdeatri.com>"]
license = "AGPL-3.0"
readme = "README.md"
description = "A tool to manage your home of repositories"
homepage = "https://github.com/hegde-atri/repo"
repository = "https://github.com/hegde-atri/repo"
keywords = ["cli", "repo", "utility", "git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.1.11", features = ["derive"] }
which = "4.4.0"

[dev-dependencies]
anyhow = "1"
